@@ -1,22 +1,17 @@
-import static org.gradle.api.JavaVersion.VERSION_1_8
-
-apply plugin: 'kotlin'
-apply plugin: 'kotlin-jpa'
+apply plugin: 'org.jetbrains.kotlin.jvm'
+apply plugin: 'org.jetbrains.kotlin.plugin.jpa'
 apply plugin: 'net.corda.plugins.quasar-utils'
-apply plugin: 'net.corda.plugins.publish-utils'
 apply plugin: 'net.corda.plugins.api-scanner'
-apply plugin: 'com.jfrog.artifactory'
+apply plugin: 'corda.common-publishing'
 
 description 'Corda core'
-
-targetCompatibility = VERSION_1_8
 
 sourceSets {
     obfuscator
 }
 
 configurations {
-    integrationTestCompile.extendsFrom testCompile
+    integrationTestImplementation.extendsFrom testImplementation
     integrationTestRuntimeOnly.extendsFrom testRuntimeOnly
 
     smokeTestCompile.extendsFrom compile
@@ -24,10 +19,9 @@ configurations {
 }
 
 dependencies {
+    implementation "io.opentelemetry:opentelemetry-api:${open_telemetry_version}"
+    implementation project(':opentelemetry')
 
-    obfuscatorImplementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    compileOnly "io.opentelemetry:opentelemetry-api:${open_telemetry_version}"
-    compileOnly project(':opentelemetry')
     testImplementation sourceSets.obfuscator.output
     testImplementation "org.junit.jupiter:junit-jupiter-api:${junit_jupiter_version}"
     testImplementation "junit:junit:$junit_version"
@@ -35,67 +29,66 @@ dependencies {
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junit_jupiter_version}"
     testRuntimeOnly "org.junit.platform:junit-platform-launcher:${junit_platform_version}"
 
-    testCompile "commons-fileupload:commons-fileupload:$fileupload_version"
+    testImplementation "commons-fileupload:commons-fileupload:$fileupload_version"
 
     // Guava: Google test library (collections test suite)
-    testCompile "com.google.guava:guava-testlib:$guava_version"
+    testImplementation "com.google.guava:guava-testlib:$guava_version"
 
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
-    testCompile "org.jetbrains.kotlin:kotlin-test:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+    testImplementation "org.jetbrains.kotlin:kotlin-test:$kotlin_version"
 
     // Hamkrest, for fluent, composable matchers
-    testCompile "com.natpryce:hamkrest:$hamkrest_version"
+    testImplementation "com.natpryce:hamkrest:$hamkrest_version"
 
     // Thread safety annotations
-    compile "com.google.code.findbugs:jsr305:$jsr305_version"
+    implementation "com.google.code.findbugs:jsr305:$jsr305_version"
 
     // SLF4J: commons-logging bindings for a SLF4J back end
-    compile "org.slf4j:jcl-over-slf4j:$slf4j_version"
-    compile "org.slf4j:slf4j-api:$slf4j_version"
+    implementation "org.slf4j:jcl-over-slf4j:$slf4j_version"
+    implementation "org.slf4j:slf4j-api:$slf4j_version"
 
     // AssertJ: for fluent assertions for testing
-    testCompile "org.assertj:assertj-core:${assertj_version}"
+    testImplementation "org.assertj:assertj-core:${assertj_version}"
 
     // Guava: Google utilities library.
-    compile "com.google.guava:guava:$guava_version"
+    implementation "com.google.guava:guava:$guava_version"
 
     // For caches rather than guava
-    compile "com.github.ben-manes.caffeine:caffeine:$caffeine_version"
+    implementation "com.github.ben-manes.caffeine:caffeine:$caffeine_version"
 
     // RxJava: observable streams of events.
-    compile "io.reactivex:rxjava:$rxjava_version"
+    implementation "io.reactivex:rxjava:$rxjava_version"
     
-    compile "org.apache.commons:commons-lang3:$commons_lang_version"
+    implementation "org.apache.commons:commons-lang3:$commons_lang3_version"
 
     // Java ed25519 implementation. See https://github.com/str4d/ed25519-java/
-    compile "net.i2p.crypto:eddsa:$eddsa_version"
+    implementation "net.i2p.crypto:eddsa:$eddsa_version"
 
     // Bouncy castle support needed for X509 certificate manipulation
-    compile "org.bouncycastle:bcprov-jdk18on:${bouncycastle_version}"
-    compile "org.bouncycastle:bcpkix-jdk18on:${bouncycastle_version}"
+    implementation "org.bouncycastle:bcprov-jdk18on:${bouncycastle_version}"
+    implementation "org.bouncycastle:bcpkix-jdk18on:${bouncycastle_version}"
 
     // JPA 2.2 annotations.
-    compile "javax.persistence:javax.persistence-api:2.2"
+    implementation "javax.persistence:javax.persistence-api:2.2"
 
     // required to use @Type annotation
-    compile "org.hibernate:hibernate-core:$hibernate_version"
+    implementation "org.hibernate:hibernate-core:$hibernate_version"
 
     // FastThreadLocal
-    compile "io.netty:netty-common:$netty_version"
+    implementation "io.netty:netty-common:$netty_version"
 
-    compile group: "io.github.classgraph", name: "classgraph", version: class_graph_version
+    implementation group: "io.github.classgraph", name: "classgraph", version: class_graph_version
 
-    testCompile "org.ow2.asm:asm:$asm_version"
+    testImplementation "org.ow2.asm:asm:$asm_version"
 
     // JDK11: required by Quasar at run-time
     testRuntimeOnly "com.esotericsoftware:kryo:$kryo_version"
 
-    testCompile "com.nhaarman:mockito-kotlin:$mockito_kotlin_version"
-    testCompile "org.mockito:mockito-core:$mockito_version"
-    testCompile "org.assertj:assertj-core:$assertj_version"
-    testCompile "com.natpryce:hamkrest:$hamkrest_version"
-    testCompile 'org.hamcrest:hamcrest-library:2.1'
+    testImplementation "org.mockito.kotlin:mockito-kotlin:$mockito_kotlin_version"
+    testImplementation "org.mockito:mockito-core:$mockito_version"
+    testImplementation "org.assertj:assertj-core:$assertj_version"
+    testImplementation "com.natpryce:hamkrest:$hamkrest_version"
+    testImplementation 'org.hamcrest:hamcrest-library:2.1'
 
 }
 
@@ -110,12 +103,15 @@ jar {
     finalizedBy(copyQuasarJar)
     archiveBaseName = 'corda-core'
     archiveClassifier = ''
+
+    manifest {
+        attributes('Add-Opens': 'java.base/java.net java.base/java.nio')
+    }
 }
 
 configurations {
     testArtifacts.extendsFrom testRuntimeClasspath
 }
-
 
 processTestResources {
     inputs.files(jar)
@@ -128,9 +124,11 @@ processTestResources {
 
 test {
     maxParallelForks = (System.env.CORDA_CORE_TESTING_FORKS == null) ? 1 :  "$System.env.CORDA_CORE_TESTING_FORKS".toInteger()
+    jvmArgs test_add_opens
+    jvmArgs test_add_exports
 }
 
-task testJar(type: Jar) {
+task testJar(type: Jar, dependsOn: testClasses) {
     classifier "tests"
     from sourceSets.test.output
 }
@@ -165,11 +163,6 @@ quasar {
             "io.opentelemetry.**")
 }
 
-artifacts {
-    testArtifacts testJar
-    publish testJar
-}
-
 scanApi {
     excludeClasses = [
         // Kotlin should probably have declared this class as "synthetic".
@@ -177,13 +170,23 @@ scanApi {
     ]
 }
 
-publish {
-    name jar.baseName
-}
-
 tasks.register("writeTestResources", JavaExec) {
     classpath sourceSets.obfuscator.output
     classpath sourceSets.obfuscator.runtimeClasspath
     main 'net.corda.core.internal.utilities.TestResourceWriter'
     args new File(sourceSets.test.resources.srcDirs.first(), "zip").toString()
+}
+
+artifacts {
+    testArtifacts testJar
+}
+
+publishing {
+    publications {
+        maven(MavenPublication) {
+            artifactId 'corda-core'
+            artifact(testJar)
+            artifact(jar)
+        }
+    }
 }
